--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>Falling (Editor)</title>
+		<title>WebApp Team</title>
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 		<!-- build:css styles/vendor.css -->
@@ -22,27 +22,44 @@
 		<!-- endbuild -->
 
 	</head>
-	<body class="creator">
+	<body>
 		<div class="modal fade">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						<h4 class="modal-title">Modal title</h4>
+						<legend>New Character</legend>
 					</div>
 					<div class="modal-body">
 						<div class="form-group">
-							<label for="select" class="col-lg-2 control-label">Select Sprite(s)</label>
+							<label for="name-input" class="col-lg-2 control-label">Name</label><br />
 							<div class="col-lg-10">
-								<br>
-								<select multiple="" class="form-control" id="select">
-								</select>
+								<input class="form-control" id="name-input"></input>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="togglebutton">
+								<label>
+									Don't Host &nbsp;&nbsp;<input checked="true" type="checkbox" id="toggle-host"><span class="toggle"></span> Host
+								</label>
+							</div>
+						</div>
+						<div class="toggle-wrap host">
+							<div class="form-group host">
+								<label class="col-lg-2 control-label">Show your team mates this code</label><br />
+								<h2 class="peerjs-id" align="center">12345</h2>
+							</div>
+							<div class="form-group not-host">
+								<label for="team-code-input" class="col-lg-2 control-label">Enter Team Code</label><br />
+								<div class="col-lg-10">
+									<input class="form-control" id="team-code-input"></input>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary" id="modal-okay">Select</button>
+						<button type="button" class="btn btn-primary" id="modal-okay">Join Team</button>
 					</div>
 				</div>
 			</div>
@@ -51,69 +68,30 @@
 			<div class="header-panel shadow-z-2">
 				<div class="navbar navbar-default">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<span class="navbar-brand">Editor</span>
-					</div>
-					<div class="navbar-collapse collapse navbar-responsive-collapse">
-						<ul class="nav navbar-nav">
-							<li><a id="context-link" href="javascript:void(0)">New object</a></li>
-							<li class="dropdown">
-								<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li class="menu-global dropdown-header">Global tools</li>
-									<li class="menu-global"><a href="javascript:void(0)">Set world scale</a></li>
-									<li class="menu-object dropdown-header">Object tools</li>
-									<li class="menu-object"><a href="javascript:void(0)">Cancel</a></li>
-									<li class="menu-object"><a href="javascript:void(0)">Finished</a></li>
-									<li class="menu-shape dropdown-header">Shape tools</li>
-									<li class="menu-shape"><a href="javascript:void(0)">Add new shape</a></li>
-									<li class="menu-sprite dropdown-header">Sprite tools</li>
-									<li class="menu-sprite"><a href="javascript:void(0)">Add new sprite</a></li>
-									<!--<li class="divider"></li>-->
-								</ul>
-							</li>
-						</ul>
-						<!--<form class="navbar-form navbar-left">
-							<input class="form-control col-lg-8" placeholder="Search" type="text">
-						</form>-->
-						<ul class="nav navbar-nav navbar-right">
-							<li><a id="test-link" href="javascript:void(0)">Test</a></li>
-						</ul>
+						<span class="navbar-brand">Web<script>document.write(["", " ", "-", "_"][Math.floor(Math.random() * 3)])</script>App Team</span>
 					</div>
 				</div>
 			</div>
 		</div>
-		</div>
 		<div class="workspace container-fluid">
-			<div class="workspace-contents hidden col-sm-12 col-lg-4">
-				<h3>Objects</h3>
-				<table class="table" id="objects-target">
-				</table>
-				<h3>Properties</h3>
-				<table class="table" id="properties-target">
-				</table>
-			</div>
-			<div class="workspace-editor col-sm-12 col-lg-8">
-				<button id="context-button" class="btn btn-fab btn-raised btn-material-cyan">
-					<i class="mdi-content-add"></i>
-					<div class="ripple-wrapper"></div>
-				</button>
-				<div id="render-target">
-					<h1>Loading...</h1>
+			<div class="main col-sm-12">
+				<div class="panel panel-primary">
+					<div class="panel-body">
+						<p>Web App Team is based upon the inimitable <a href="" target="_blank">Space Team</a></p>
+						<p>Form a pod, have a stand up, use all the Jargon...</p>
+					</div>
+					<div class="panel-footer">
+						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- build:js scripts/main.js -->
-		<script src="../bower_components/pixi.js/bin/pixi.js"></script>
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="../bower_components/bootstrap-material-design/scripts/ripples.js"></script>
 		<script src="../bower_components/bootstrap-material-design/scripts/material.js"></script>
-		<script src="scripts/creator.js"></script>
+		<script src="scripts/main.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
