--- a/app/index.html
+++ b/app/index.html
@@ -30,14 +30,14 @@
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 						<legend>New Character</legend>
 					</div>
-					<div class="modal-body">
-						<div class="form-group">
+					<div class="modal-body form">
+						<div class="form-group name">
 							<label for="name-input" class="col-lg-2 control-label">Name</label><br />
 							<div class="col-lg-10">
 								<input class="form-control" id="name-input"></input>
 							</div>
 						</div>
-						<div class="form-group">
+						<div class="form-group toggle-hosting">
 							<div class="togglebutton">
 								<label>
 									Don't Host &nbsp;&nbsp;<input checked="true" type="checkbox" id="toggle-host"><span class="toggle"></span> Host
@@ -47,7 +47,7 @@
 						<div class="toggle-wrap host">
 							<div class="form-group host">
 								<label class="col-lg-2 control-label">Show your team mates this code</label><br />
-								<h2 class="peerjs-id" align="center">12345</h2>
+								<h2 id="peerjs-id" align="center">12345</h2>
 							</div>
 							<div class="form-group not-host">
 								<label for="team-code-input" class="col-lg-2 control-label">Enter Team Code</label><br />
