Add game initial object

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
 		</div>
 		<div class="workspace container-fluid">
 			<div class="main col-sm-12">
-				<div class="panel panel-primary">
+				<div class="panel panel-primary introduction">
 					<div class="panel-body">
 						<p>Web App Team is based upon the inimitable <a href="" target="_blank">Space Team</a></p>
 						<p>Form a pod, have a stand up, use all the Jargon...</p>
