Add game initial object

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,18 @@
 						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
 					</div>
 				</div>
+				<div class="panel panel-primary" id="waiting-room">
+					<div class="panel-header">
+						<h3>Team Planning</h3>
+					</div>
+					<div class="panel-body">
+						<div id="notifications-target"></div>
+						<div id="players"></div>
+					</div>
+					<div class="panel-footer">
+						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
+					</div>
+				</div>
 			</div>
 		</div>
 		<!-- build:js scripts/main.js -->
