Waiting room notifications

--- a/app/index.html
+++ b/app/index.html
@@ -73,9 +73,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="workspace container-fluid">
+		<div class="workspace container-fluid introduction">
 			<div class="main col-sm-12">
-				<div class="panel panel-primary introduction">
+				<div class="panel panel-primary" id="introduction">
 					<div class="panel-body">
 						<p>Web App Team is based upon the inimitable <a href="" target="_blank">Space Team</a></p>
 						<p>Form a pod, have a stand up, use all the Jargon...</p>
@@ -85,8 +85,8 @@
 					</div>
 				</div>
 				<div class="panel panel-primary" id="waiting-room">
-					<div class="panel-header">
-						<h3>Team Planning</h3>
+					<div class="panel-heading">
+						<h3 class="panel-title">Team Planning</h3>
 					</div>
 					<div class="panel-body">
 						<div id="notifications-target"></div>
@@ -94,6 +94,15 @@
 					</div>
 					<div class="panel-footer">
 						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
+					</div>
+				</div>
+				<div class="panel panel-primary" id="game-play-space">
+					<div class="panel-heading">
+						<h3 class="panel-title">Sprint X</h3>
+					</div>
+					<div class="panel-body">
+						<div id="notifications-target"></div>
+						<div id="players"></div>
 					</div>
 				</div>
 			</div>
