Add work workflow

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
 						<div id="players"></div>
 					</div>
 					<div class="panel-footer">
-						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
+						<button type="button" class="btn btn-primary right" id="game-start">Go Team Go</button>
 					</div>
 				</div>
 				<div class="panel panel-primary" id="game-play-space">
