--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,10 @@
 					<div class="panel-heading">
 						<h3 class="panel-title">Sprint X</h3>
 					</div>
+					<div class="progress">
+						<div class="progress-bar progress-bar-info" style="width: 20%"></div>
+					</div>
+					<div id="job-target"></div>
 					<div class="panel-body">
 						<div id="notifications-target"></div>
 						<div id="players"></div>
