--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 						<div class="toggle-wrap host">
 							<div class="form-group host">
 								<label class="col-lg-2 control-label">Show your team mates this code</label><br />
-								<h2 id="peerjs-id" align="center">12345</h2>
+								<h2 id="peerjs-id" align="center">Generating your startup name...</h2>
 							</div>
 							<div class="form-group not-host">
 								<label for="team-code-input" class="col-lg-2 control-label">Enter Team Code</label><br />
@@ -77,7 +77,7 @@
 			<div class="main col-sm-12">
 				<div class="panel panel-primary" id="introduction">
 					<div class="panel-body">
-						<p>Web App Team is based upon the inimitable <a href="" target="_blank">Space Team</a></p>
+						<p>Web App Team is based upon the inimitable <a href="http://www.sleepingbeastgames.com/spaceteam/" target="_blank">Space Team</a></p>
 						<p>Form a pod, have a stand up, use all the Jargon...</p>
 					</div>
 					<div class="panel-footer">
@@ -89,8 +89,8 @@
 						<h3 class="panel-title">Team Planning</h3>
 					</div>
 					<div class="panel-body">
-						<div id="notifications-target"></div>
-						<div id="players"></div>
+						<div id="banner-holder"></div>
+						<table class="table table-striped table-hover" id="founders"></table>
 					</div>
 					<div class="panel-footer">
 						<button type="button" class="btn btn-primary right" id="game-start">Go Team Go</button>
