--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="toggle-wrap host">
 							<div class="form-group host">
-								<label class="col-lg-2 control-label">Show your team mates this code</label><br />
+								<label class="col-lg-2 control-label">Your Team name will be</label><br />
 								<h2 id="peerjs-id" align="center">Generating your startup name...</h2>
 							</div>
 							<div class="form-group not-host">
