Working on clients notifying that they're ready

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
 						<p>Form a pod, have a stand up, use all the Jargon...</p>
 					</div>
 					<div class="panel-footer">
-						<button type="button" class="btn btn-primary right" id="web-team-begin">Begin</button>
+						<button type="button" class="btn btn-primary right" id="web-team-begin">Ready To Begin</button>
 					</div>
 				</div>
 				<div class="panel panel-primary" id="waiting-room">
